--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div id="collapsed-nav-item-2" class="collapsed-nav-item" onclick="petition.showModal()">
                 <i class="fa-solid fa-newspaper"></i> Sign the petition
             </div>
-            <a href="about.html">
+            <a href="sveltetest/src/app.html">
                 <div id="collapsed-nav-item-3" class="collapsed-nav-item">
                     <i class="fa-solid fa-download"></i> Read about the blocker
                 </div>
